<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>domyrobo_controller</name>
  <version>0.0.0</version>
  <description>Package for controlling Domyrobo motors via message publishing</description>
  <maintainer email="dhonan.hibatullah@gmail.com">dhonan</maintainer>
  <license>Apache-2.0</license>

  <depend>domyrobo_lib</depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
